[gd_scene load_steps=8 format=2]

[ext_resource path="res://Source/Camera/Camera.gd" type="Script" id=1]
[ext_resource path="res://Shaders/ChromaticAberration.shader" type="Shader" id=2]
[ext_resource path="res://Assets/White.png" type="Texture" id=3]
[ext_resource path="res://Shaders/ChromaticAberrationSampler.png" type="Texture" id=4]
[ext_resource path="res://Source/Camera/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/Camera/HUD.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/strength_sampler = ExtResource( 4 )

[node name="Camera" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="ScreenShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="ChromaticAberrationTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]
margin_left = -152.0
margin_top = -112.0
margin_right = 152.0
margin_bottom = 112.0
script = ExtResource( 6 )

[node name="ChromaticAberrationTextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource( 1 )
margin_left = -160.0
margin_top = -120.0
margin_right = -159.0
margin_bottom = -119.0
rect_scale = Vector2( 320, 240 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ChromaticAberrationTimer" to="." method="_on_ChromaticAberrationTimer_timeout"]
